--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,17 @@
 
 /* shared */
 
-.rounded-image {
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 .display-none {
   display: none;
+}
+
+.selected-color {
+  color: #0F84FF;
+}
+
+.post-action-icon {
+  float: right;
+  cursor: pointer;
 }
 
 #gray-out {
@@ -35,92 +39,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 100;
-}
-
-.more-icon {
-  cursor: pointer;
-  float: right;
-}
-
-/* 投稿の「もっと見る」 */
-.post-content {
-  position: relative;
-  max-height: 150px;
-  overflow: hidden;
-  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
-  font-size: 2rem;
-}
-
-.post-content.active {
-  max-height: none;
-}
-
-.post-content::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  display: block;
-  background: linear-gradient(rgba(255, 255, 255, 0) 0, #fff 90%);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.post-content.active::before {
-  background: none;
-}
-
-.more-see-btn {
-  text-align: center;
-  border: none;
-  color: #0F84FF;
-  font-size: 1.5rem;
-  background-color: #fff;
-  text-decoration: underline;
-  text-decoration-color: #7bb5f4;
-  text-underline-offset: 5px;
-}
-
-/* review delete popup */
-.more-popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  width: 30vw;
-  height: auto;
-  padding: 20px 30px;
-
-  .post-delete {
-    .delete-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      span {
-        flex-grow: 1;
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-      }
-    }
-
-    .close-icon {
-      margin-left: auto;
-      cursor: pointer;
-    }
-  }
-
-  .delete-icon {
-    margin: 30px 0;
-    cursor: pointer;
-    font-size: 20px;
-  }
 }
 
 /* header */
@@ -234,11 +152,6 @@ header {
     font-size: 15px;
   }
 
-  .profile-hr {
-    border: 0.5px solid #cccaca;
-    width: 50%;
-  }
-
   .main-grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -264,42 +177,6 @@ header {
 
     .display-none {
       display: none;
-    }
-  }
-
-  .post-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 9fr;
-    width: 80%;
-    margin: 0 auto;
-
-    .user-name {
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    .user-info {
-      display: flex;
-      align-items: center;
-    }
-
-    .heritage-name {
-      color: #0957dd;
-      font: bold;
-      font-size: 20px;
-    }
-
-    .post-hr {
-      margin: 20px 0;
-      border: 0.1px solid #e8e8e8;
-    }
-
-    .post-img {
-      margin: 30px 0;
-    }
-
-    .more-icon {
-      margin-left: auto;
     }
   }
 }
