--- a/app/assets/stylesheets/module/user_profile_info.scss
+++ b/app/assets/stylesheets/module/user_profile_info.scss
@@ -9,7 +9,7 @@
 }
 
 .user-profile {
-  padding: 4vh 5vw;
+  padding: 3vh 5vw;
   display: flex;
   &__user-icon {
     flex: 2;
@@ -49,11 +49,12 @@
   .user-profile-page {
     width: 100%;
     border-radius: 0;
+    margin-top: 0;
   }
   .user-profile {
-    padding-bottom: 0;
+    padding: 0 5vw;
   }
   .user-profile-content {
-    font-size: 1.0rem;
+    font-size: 1.5rem;
   }
 }
