--- a/app/views/shared/_toggle_user_buttons.html.erb
+++ b/app/views/shared/_toggle_user_buttons.html.erb
@@ -1,7 +1,7 @@
 <div class="toggle-user-btns">
   <% if current_user?(user) %>
     <%= link_to "プロフィール編集", edit_user_url(user), class: "toggle-user-btns__profile-edit" %>
-  <% elsif following?(user) %>
+  <% elsif current_user.following?(user) %>
     <%= form_with(model: current_user.active_relationships.build) do |f| %>
       <div><%= hidden_field_tag :followed_id, user.id %></div>
       <%= f.submit "フォロー", class: "toggle-user-btns__follow" %>
