--- a/app/assets/stylesheets/module/user_post_details.scss
+++ b/app/assets/stylesheets/module/user_post_details.scss
@@ -8,6 +8,8 @@
     color: #0957dd;
     font: bold;
     font-size: 2rem;
+    display: inline-block;
+    padding: 10px 0;
   }
   &__post-img {
     margin: 30px 0;
