--- a/app/assets/stylesheets/module/user_profile_info.scss
+++ b/app/assets/stylesheets/module/user_profile_info.scss
@@ -1,4 +1,4 @@
-.user-profile-page {
+.user-profile-page-wrapper {
   width: 60vw;
   margin: 4vh auto;
   background-color: #fff;
@@ -46,7 +46,7 @@
 }
 
 @media (max-width: 767px) {
-  .user-profile-page {
+  .user-profile-page-wrapper {
     width: 100%;
     border-radius: 0;
     margin-top: 0;
