--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="user-profile-page">
+<div class="user-profile-page-wrapper">
   <div class="user-profile">
     <div class="user-profile__user-icon">
       <%= image_tag @user.profile_image %>
