--- a/app/assets/stylesheets/module/heritage_info_wrapper.scss
+++ b/app/assets/stylesheets/module/heritage_info_wrapper.scss
@@ -6,17 +6,20 @@
 }
 
 .heritage-info-wrapper {
-  padding: 5vh 5vw;
+  padding: 5vh 5vw 0 5vw;
+
   &__heritage-name {
     font-weight: bold;
     font-size: 3rem;
     margin-bottom: 30px;
     color: #0957dd;
   }
+
   &__hr {
     margin: 5vh 0;
   }
 }
+
 .heritage-country {
   display: inline-block;
 }
@@ -29,12 +32,15 @@
     margin-top: 0;
     padding: 30px 15px;
   }
+
   .heritage-info-wrapper {
     padding: 0 5vw;
+
     &__heritage-name {
       font-size: 2.5rem;
       margin-bottom: 10px;
     }
+
     &__hr {
       margin-top: 10px;
       width: 100vw;
